<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"

    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".scan">


    <ImageView
        android:layout_width="match_parent"
        app:srcCompat="@drawable/daru"
        android:id="@+id/imageView"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="14dp"

        android:layout_height="154dp"

        android:layout_alignParentRight="true" />

    <ImageButton
        android:background="@color/white"
        app:srcCompat="@drawable/inventory2_72"
        android:id="@+id/history"

        android:layout_alignTop="@+id/scan"
        android:layout_alignParentEnd="true"
        android:scaleType="fitXY"
        android:adjustViewBounds="true"

        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="20dp"
        android:layout_alignParentRight="true" />

    <ImageButton
        android:background="@color/white"
        app:srcCompat="@drawable/shoping_cart_72"
        android:id="@+id/cart"
        android:scaleType="fitXY"
        android:adjustViewBounds="true"


        android:layout_height="72dp"
        android:layout_width="72dp"
        android:layout_below="@+id/history"
        android:layout_alignLeft="@+id/history"
        android:layout_alignStart="@+id/history"
        android:layout_marginTop="29dp" />

    <ImageButton
        android:background="@color/white"
        app:srcCompat="@drawable/bill_72"
        android:id="@+id/wallet"
        android:scaleType="fitXY"


        android:layout_width="72dp"
        android:layout_height="72dp"
        android:adjustViewBounds="true"
        android:layout_alignTop="@+id/cart"
        android:layout_toLeftOf="@+id/textView"
        android:layout_toStartOf="@+id/textView" />

    <ImageButton
        android:background="@color/white"
        app:srcCompat="@drawable/barcode_72"
        android:id="@+id/scan"
        android:scaleType="fitXY"

        android:adjustViewBounds="true"

        android:layout_height="72dp"
        android:layout_width="72dp"
        android:layout_below="@+id/textView"
        android:layout_alignLeft="@+id/wallet"
        android:layout_alignStart="@+id/wallet"
        android:layout_marginTop="51dp" />

    <TextView
        android:text="@string/gridtext"
        android:layout_width="160dp"

        android:id="@+id/textView"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:layout_height="35dp"
        android:scrollbarAlwaysDrawHorizontalTrack="true"
        android:textSize="30sp"
        android:layout_marginTop="21dp"
        android:layout_below="@+id/imageView"
        android:layout_alignRight="@+id/history"
        android:layout_alignEnd="@+id/history"
        android:layout_marginRight="31dp"
        android:layout_marginEnd="31dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scan"
        android:layout_below="@+id/scan"
        android:layout_alignRight="@+id/scan"
        android:layout_alignEnd="@+id/scan"
        android:layout_alignLeft="@+id/scan"
        android:layout_alignStart="@+id/scan"
        android:textAlignment="center"
        />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/records"
        android:layout_above="@+id/cart"
        android:layout_alignLeft="@+id/history"
        android:layout_alignStart="@+id/history"
        android:layout_alignRight="@+id/history"
        android:layout_alignEnd="@+id/history"
        android:textAlignment="center"
        android:layout_marginLeft="11dp"
        />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/payment"
        android:layout_below="@+id/wallet"
        android:layout_alignLeft="@+id/wallet"
        android:layout_alignStart="@+id/wallet"
        android:layout_alignRight="@+id/wallet"
        android:layout_alignEnd="@+id/wallet"
        android:textAlignment="center"
        android:layout_marginLeft="6dp"
        />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/cart"
        android:layout_alignRight="@+id/cart"
        android:layout_alignTop="@+id/textView7"
        android:text="@string/cart"
        android:layout_alignLeft="@+id/cart"
        android:layout_alignStart="@+id/cart"
        android:textAlignment="center"/>


</RelativeLayout>